add dummy cards for java and web section

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -70,9 +70,55 @@
             </p>
             <div id="java-project">
                 <p>This is project page</p>
+                <div class="wrapper">
+                    <div>One
+                        <div class="project-container project-card">
+                            <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">My Resume</h3>
+                            <p class="project-details">
+                                This is my resume description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <div>Two
+                        <div class="project-container project-card">
+                            <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">Sports Activities Service</h3>
+                            <p class="project-details">
+                                This is Sports Activities Service description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <!-- <div>Three</div> -->
+                </div>
             </div>
             <div id="java-problems">
                 <p>This is problems page</p>
+                <div class="wrapper">
+                    <div>One
+                        <div class="project-container project-card">
+                            <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">My Resume</h3>
+                            <p class="project-details">
+                                This is my resume description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <div>Two
+                        <div class="project-container project-card">
+                            <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">Sports Activities Service</h3>
+                            <p class="project-details">
+                                This is Sports Activities Service description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <!-- <div>Three</div> -->
+                </div>
             </div>
         </div>
 
@@ -91,55 +137,45 @@
                             <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
                         </div>
                     </div>
-                    <div>Two</div>
-                    <div>Three</div>
-                    <div>Four
-                        <br>This cell
-                        <br>Has extra
-                        <br>content.
-                        <br>Max is auto
-                        <br>so the row expands.
+                    <div>Two
+                        <div class="project-container project-card">
+                            <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">Sports Activities Service</h3>
+                            <p class="project-details">
+                                This is Sports Activities Service description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
                     </div>
-                    <div>Five</div>
+                    <!-- <div>Three</div> -->
                 </div>
             </div>
 
-            <section class="projects" id="projects">
-                <h2 class="projects-title">Some of my Recent Projects</h2>
-                <div class="projects-container">
-                    <div class="project-container project-card">
-                        <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
-                        <h3 class="project-title">My Resume</h3>
-                        <p class="project-details">
-                            This is my resume description
-                        </p>
-                        <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
-                    </div>
-                    <hr>
-                    <div class="project-container project-card">
-                        <img src="images/sportsActivitieService.PNG" alt="netflic-clone" loading="lazy" class="project-pic" />
-                        <h3 class="project-title">Sports Activities Service</h3>
-                        <p class="project-details">
-                            This is my Sports Activities Service description
-
-                        </p>
-                        <p>
-                            <a href="#" target="_blank" class="project-link">Check it Out</a>
-                        </p>
-
-                    </div>
-                    <!-- <div class="project-container project-card">
-                        <img src="assets/images/greenyEarth.png" alt="greeny-earth" loading="lazy" class="project-pic" />
-                        <h3 class="project-title">Greeny Earth</h3>
-                        <p class="project-details">
-                            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas ratione vel inventore labore commodi modi quos culpa aut saepe! Alias!
-                        </p>
-                        <a href="#" target="_blank" class="project-link">Check it Out</a>
-                    </div> -->
-                </div>
-            </section>
             <div id="web-practice">
                 <p>This is practice page</p>
+                <div class="wrapper">
+                    <div>One
+                        <div class="project-container project-card">
+                            <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">My Resume</h3>
+                            <p class="project-details">
+                                This is my resume description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <div>Two
+                        <div class="project-container project-card">
+                            <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" />
+                            <h3 class="project-title">Sports Activities Service</h3>
+                            <p class="project-details">
+                                This is Sports Activities Service description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <!-- <div>Three</div> -->
+                </div>
             </div>
         </div>
         <div id="contactMe" class="main">
