add correct github and linkedin links to portfolio icons

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -43,9 +43,9 @@
                 <a href="#contactMe" class="main-section">Contact</a>
             </ul>
             <div class="sidenav-bottom">
-                <a href="#"><img src="images/github.png" title="github icons"></img>
+                <a href="https://github.com/woon17"><img src="images/github.png" title="github icons"></img>
                 </a>
-                <a href="#"><img src="images/246593_linkedin_icon.png" title="github icons"></img>
+                <a href="https://www.linkedin.com/in/shufa-wen-7a530418b/"><img src="images/246593_linkedin_icon.png" title="github icons"></img>
                 </a>
             </div>
         </nav>
