change the class name in html and css

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -52,7 +52,7 @@
     </div>
 
     <div class="content">
-        <div id="home" class="main">
+        <div id="home" class="content-section">
             <!-- <img src="images/hacker.webp" alt="HH1 image missing" style="height: 100%; width: 100%; position: relative;"> -->
             <div>
                 <!-- My name is Wen Shufa. My goal is to pursue this passion within the field of web development. -->
@@ -64,7 +64,7 @@
                 </p>
             </div>
         </div>
-        <div id="java" class="main">
+        <div id="java" class="content-section">
 
             <div id="java-project">
                 <h2><span>Java Projects</span></h2>
@@ -120,7 +120,7 @@
             </div>
         </div>
 
-        <div id="web" class="main">
+        <div id="web" class="content-section">
 
             <div id="web-project">
                 <h2><span>Web Application Projects</span></h2>
@@ -176,7 +176,7 @@
                 </div>
             </div>
         </div>
-        <div id="contactMe" class="main">
+        <div id="contactMe" class="content-section">
             <h2><span>Contact Me</span></h2>
             <p>Location: Singapore</p>
             <p>Phone: +65 87271745</p>
