add more samples in html

--- a/WebSection/MyPortfolio/portfolio.html
+++ b/WebSection/MyPortfolio/portfolio.html
@@ -31,7 +31,7 @@
                 <li>
                     <label for="services">Java Section</label>
                     <a href="#java-project" class="sub">Projects</a>
-                    <a href="#java-problems" class="sub">Problems</a>
+                    <a href="#java-problems" class="sub">Practices</a>
                 </li>
                 <input type="radio" name="nav-area" id="portfolio">
                 <li>
@@ -89,18 +89,28 @@
                             <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
                         </div>
                     </div>
+                    <div>
+                        <div class="project-container project-card">
+                            <!-- <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" /> -->
+                            <h3 class="project-title">ProjectName3</h3>
+                            <p class="project-details">
+                                This is ProjectName3 description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
                     <!-- <div>Three</div> -->
                 </div>
             </div>
             <div id="java-problems">
-                <h2><span>Java Problems</span></h2>
+                <h2><span>Java Practices</span></h2>
                 <div class="wrapper">
                     <div>
                         <div class="project-container project-card">
                             <!-- <img src="images/resume.PNG" alt="expense-tracker" loading="lazy" class="project-pic" /> -->
-                            <h3 class="project-title">Problems1</h3>
+                            <h3 class="project-title">Practices1</h3>
                             <p class="project-details">
-                                This is Problems1 description
+                                This is Practices1 description
                             </p>
                             <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
                         </div>
@@ -108,9 +118,19 @@
                     <div>
                         <div class="project-container project-card">
                             <!-- <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" /> -->
-                            <h3 class="project-title">Problems2</h3>
+                            <h3 class="project-title">Practices2</h3>
                             <p class="project-details">
-                                This is Problems2 description
+                                This is Practices2 description
+                            </p>
+                            <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
+                        </div>
+                    </div>
+                    <div>
+                        <div class="project-container project-card">
+                            <!-- <img src="images/sportsActivitieService.PNG" alt="expense-tracker" loading="lazy" class="project-pic" /> -->
+                            <h3 class="project-title">Practices3</h3>
+                            <p class="project-details">
+                                This is Practices3 description
                             </p>
                             <p><a href="#" target="_blank" class="project-link">Check it Out</a></p>
                         </div>
