add week 3 web section code and java school management system code

--- a/WebSection/practice/js learning/jsDemo2.html
+++ b/WebSection/practice/js learning/jsDemo2.html
@@ -104,7 +104,7 @@
 
     function sumFunc2(previousValue, currentValue, currentIndex, array) {
         // function sumFunc2(previousValue, currentValue) {
-        return 1 + currentValue;
+        return previousValue + currentValue;
     }
     print("sum2: " + sum2); //sum2: 119
 </script>
