add week 4 day 1 web section js code

--- a/WebSection/practice/js learning/jsDemo3.html
+++ b/WebSection/practice/js learning/jsDemo3.html
@@ -34,9 +34,9 @@
         print(books);
     }
 
-    function deleteBook(bookName) {
-        books.
-    }
+    // function deleteBook(bookName) {
+    //     books.
+    // }
 
     function exit() {
 
