add week 5 day 2 java section code
MVC practices

--- a/InsertionToDatabase/src/main/webapp/display.html
+++ b/InsertionToDatabase/src/main/webapp/display.html
@@ -6,11 +6,11 @@
 </head>
 <body>
 	<form action="/InsertionToDatabase/InsertData">
-		ID: <input type="text" name="id"><br> Name: <input
-			type="text" name="name"><br> Marks1: <input type="text"
-			name="marks1"><br> Marks2: <input type="text"
-			name="marks2"> <br> Marks3: <input type="text"
-			name="marks3"> <input type="submit" value="Add Detail">
+		ID: <input type="text" name="id"><br> 
+		Name: <input type="text" name="name"><br> 
+		Marks1: <input type="text" name="marks1"><br> 
+		Marks2: <input type="text" name="marks2"> <br> 
+		Marks3: <input type="text" name="marks3"> <input type="submit" value="Add Detail">
 	</form>
 
 </body>
