--- a/SigninApplication/src/main/webapp/invalidUserName.html
+++ b/SigninApplication/src/main/webapp/invalidUserName.html
@@ -5,9 +5,9 @@
 <title>Insert title here</title>
 </head>
 <body>
+<p style="color:red">User name is not correct</p>
 	<form action="/SigninApplication/Signin">
-		<table>
-	
+		<table>	
 			<tr>
 				<td>User Name:</td>
 				<td><input type="text" name="un"></td>
@@ -21,7 +21,5 @@
 				<td><input type="submit" value="Create Account"></td>
 			</tr>
 		</table>
-
-	</form>
 </body>
 </html>
