add week 5 java section code and edit my SMS system
session reuse.

--- a/SigninApplication/src/main/webapp/usernameEmpty.html
+++ b/SigninApplication/src/main/webapp/usernameEmpty.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p style="color:red">Please fill up all required box to login</p>
+<p style="color:red">Please give the username</p>
 	<form action="/SigninApplication/Signin">
 		<table>
 	
@@ -19,8 +19,9 @@
 			</tr>
 
 			<tr>
-				<td><input type="submit" value="Create Account"></td>
+				<td><input type="submit" value="Sign in"></td>
 			</tr>
 		</table>
+		</form>
 </body>
 </html>
