--- a/SigninApplication/src/main/webapp/invalidUserName.html
+++ b/SigninApplication/src/main/webapp/invalidUserName.html
@@ -18,7 +18,7 @@
 			</tr>
 
 			<tr>
-				<td><input type="submit" value="Create Account"></td>
+				<td><input type="submit" value="Sign in"></td>
 			</tr>
 		</table>
 </body>
