--- a/SigninApplication/src/main/webapp/passwordEmpty.html
+++ b/SigninApplication/src/main/webapp/passwordEmpty.html
@@ -5,7 +5,7 @@
 <title>Insert title here</title>
 </head>
 <body>
-<p style="color:red">Password is not correct</p>
+<p style="color:red">Please give the password</p>
 	<form action="/SigninApplication/Signin">
 		<table>
 	
@@ -22,5 +22,6 @@
 				<td><input type="submit" value="Sign in"></td>
 			</tr>
 		</table>
+		</form>
 </body>
 </html>
