add week 6 day 1 java code

--- a/CarServiceSystem/src/main/webapp/addNewCarDetails.html
+++ b/CarServiceSystem/src/main/webapp/addNewCarDetails.html
@@ -18,7 +18,7 @@
 			</tr>
 			<tr>
 				<td>Car Register Number:</td>
-				<td><input type="password" name="carNum"></td>
+				<td><input type="text" name="carNum"></td>
 			</tr>
 			<tr>
 				<td><input type="submit" value="Add Car Details"></td>
