--- a/CarServiceSystem/src/main/webapp/customerLogin.html
+++ b/CarServiceSystem/src/main/webapp/customerLogin.html
@@ -14,7 +14,7 @@
 			</tr>
 			<tr>
 				<td>Password:</td>
-				<td><input type="text" name="cpassword" required></td>
+				<td><input type="password" name="cpassword" required></td>
 			</tr>
 			<tr>
 				<td><input type="submit" value="Login"></td>
