add some ui design

--- a/CarServiceSystem/src/main/webapp/customerWelcome.html
+++ b/CarServiceSystem/src/main/webapp/customerWelcome.html
@@ -1,11 +1,36 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <link href="css/index.css" type="text/css" rel="stylesheet">
+
+    <meta charset="ISO-8859-1">
+    <title>Insert title here</title>
 </head>
+
 <body>
-<a href="/CarServiceSystem/customerLogin.html">Are u a existing customer?</a><br>
-<a href="/CarServiceSystem/customerRegistration.html">Are u a first time user?</a>
+    <div class="top-image">
+        <img class="imageOnTop" src="images/customer.jpg">
+    </div>
+
+    <div class="content">
+
+
+        <table>
+            <tr>
+                <td>
+                    <a href="/CarServiceSystem/customerLogin.html">Login</a>
+                </td>
+                <td>
+                    <a href="/CarServiceSystem/customerRegistration.html">Sign up</a>
+                </td>
+            </tr>
+        </table>
+
+        <br>
+
+    </div>
+
 </body>
+
 </html>
