--- a/CarServiceSystem/src/main/webapp/index.html
+++ b/CarServiceSystem/src/main/webapp/index.html
@@ -1,18 +1,39 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+    <link href="css/index.css" type="text/css" rel="stylesheet">
+    <meta charset="ISO-8859-1">
+    <title>Insert title here</title>
 </head>
+
 <body>
-<!-- <a href="/CarServiceSystem/adminLogin.html">Are u a admin?</a><br>
-<a href="/SigninApplication/customerLogin.html">Are u a customer?</a> -->
-<form action="/CarServiceSystem/adminLogin.html">
-<input type="submit" value="admin">
-</form>
-<form action="/CarServiceSystem/customerWelcome.html">
-<input type="submit" value="customer">
-</form>
+    <div class="top-image">
+
+        <img class="imageOnTop" src="images/company.jpg">
+    </div>
+
+    <div class="content">
+        <table>
+            <tr>
+                <td>
+                    <form class="button" action="/CarServiceSystem/adminLogin.html">
+                        <input type="submit" value="Admin">
+                    </form>
+                </td>
+                <td>
+                    <form class="button"  action="/CarServiceSystem/customerWelcome.html">
+                        <input type="submit" value="Customer">
+                    </form>
+                </td>
+            </tr>
+        </table>
+
+
+    </div>
+
+
 
 </body>
+
 </html>
