--- a/CarServiceSystem/src/main/webapp/adminLogin.html
+++ b/CarServiceSystem/src/main/webapp/adminLogin.html
@@ -1,26 +1,38 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-<meta charset="ISO-8859-1">
-<title>Admin login</title>
+	<link href="css/index.css" type="text/css" rel="stylesheet">
+	<meta charset="ISO-8859-1">
+	<title>Admin login</title>
 </head>
+
 <body>
-	<p>Hello, admin</p>
-	<form action="/CarServiceSystem/AdminLogin">
-		<table>
-			<tr>
-				<td>Username:</td>
-				<td><input type="text" name="username" required></td>
-			</tr>
-			<tr>
-				<td>Password:</td>
-				<td><input type="password" name="password" required></td>
-			</tr>
-			<tr>
-				<td><input type="submit" value="Login"></td>
-			</tr>
-		</table>
-	</form>
+	<div class="top-image">
+
+		<img class="imageOnTop" src="images/admin.jpg">
+	</div>
+
+	<div class="content">
+		<p>Hello, admin</p>
+		<form action="/CarServiceSystem/AdminLogin">
+			<table id="admin-login">
+				<tr>
+					<td>Username:</td>
+					<td><input type="text" name="username" required></td>
+				</tr>
+				<tr>
+					<td>Password:</td>
+					<td><input type="password" name="password" required></td>
+				</tr>
+				<tr>
+					<td id="submit"><input type="submit" value="Login"></td>
+				</tr>
+			</table>
+		</form>
+	</div>
+
 
 </body>
+
 </html>
