--- a/WebSection/Angular/AngularForms/src/index.html
+++ b/WebSection/Angular/AngularForms/src/index.html
@@ -5,7 +5,8 @@
   <title>AngularForms</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+  <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous"> -->
+  <!-- <link href="assets/static/bootstrap/css/bootstrap.min.css" rel="stylesheet" type="text/css"> -->
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
